WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
24657
Chromium fails SVG image-small-width-height layout test
https://bugs.webkit.org/show_bug.cgi?id=24657
Summary
Chromium fails SVG image-small-width-height layout test
Glen Murphy
Reported
2009-03-17 16:13:30 PDT
Skia fails to render the SVG image-small-width-height layout test correctly because we perform an unnecessary IntRect conversion when calling paintSkBitmap in ImageSkia.cpp.
Attachments
ImageSkia.cpp change
(1.47 KB, patch)
2009-03-17 16:16 PDT
,
Glen Murphy
fishd
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Glen Murphy
Comment 1
2009-03-17 16:16:31 PDT
Created
attachment 28707
[details]
ImageSkia.cpp change Updates ImageSkia.cpp to stop the unnecessary conversion to IntRect in our calls to paintSkBitmap.
Darin Fisher (:fishd, Google)
Comment 2
2009-03-23 11:35:15 PDT
Looks good to me, but I'm not expert on this code. It would be good to get a "LGTM" from Brett.
Darin Fisher (:fishd, Google)
Comment 3
2009-03-23 11:44:49 PDT
Comment on
attachment 28707
[details]
ImageSkia.cpp change Brett gave verbal LGTM. r=me Next time, please be sure to include a link to this bug in the ChangeLog entry. Thanks!
Darin Fisher (:fishd, Google)
Comment 4
2009-03-23 11:54:46 PDT
Landed as:
http://trac.webkit.org/changeset/41913
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug