2009-03-23  Glen Murphy  <glen@chromium.org>

Reviewed by Darin Fisher.

        https://bugs.webkit.org/show_bug.cgi?id=24657

        Fix Skia drawing of highly scaled bitmaps; the conversion to
        IntRect produced visible layout test failures in highly scaled
        coordinate systems.

        Test: svg/custom/image-small-width-height.svg

        * WebCore\platform\graphics\skia\ImageSkia.cpp:



Canonical link: https://commits.webkit.org/33970@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@41913 268f45cc-cd09-0410-ab3c-d52691b4dbfc